set last endpoint
